# podgist

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.py  docker-compose.yml  downloader.py  flake.nix  gpodder.py  main.py  models.py  pipeline.py  prompt_chunk.example.md  prompt_final.example.md  pyproject.toml  state_manager.py  summarizer.py  transcriber.py  utils.py  version.py
.github/workflows/: ci.yml  docker-publish.yml
config.example/: config.yaml  prompt.md
scripts/: sync_python_version.py
src/: config.py  gpodder.py  version.py
