[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podgist"
version = "1.0.0-beta.1"
description = "Podcast summarizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "google-genai==1.69.0",
  "PyYAML==6.0.3",
  "python-dotenv==1.2.2",
  "requests==2.33.0",
]

[project.scripts]
podgist = "main:main"

[tool.setuptools]
py-modules = [
  "config",
  "downloader",
  "gpodder",
  "main",
  "state_manager",
  "summarizer",
  "transcriber",
  "utils",
]
