[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podgist"
version = "1.0.0-beta.1"
description = "Podcast summarizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "openai==2.30.0",
  "PyYAML==6.0.3",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
]

[project.optional-dependencies]
dev = [
  "pyright==1.1.408",
]

[project.scripts]
podgist = "main:main"

[tool.setuptools]
py-modules = [
  "config",
  "downloader",
  "gpodder",
  "main",
  "models",
  "state_manager",
  "summarizer",
  "transcriber",
  "utils",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = [
  "*.py",
]
reportMissingTypeStubs = "none"
